--- a/ParkUp/Base.lproj/Main.storyboard
+++ b/ParkUp/Base.lproj/Main.storyboard
@@ -333,8 +333,8 @@
                                     <action selector="dateChanged:" destination="Onn-gR-oED" eventType="valueChanged" id="DWf-oH-GOs"/>
                                 </connections>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chequeando disponibilidad.." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gem-4T-avM">
-                                <rect key="frame" x="133" y="559.5" width="334" height="30.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chequeando disponibilidad.." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="gem-4T-avM">
+                                <rect key="frame" x="30" y="559.5" width="540" height="30.5"/>
                                 <gestureRecognizers/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="26"/>
                                 <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -348,8 +348,11 @@
                         <constraints>
                             <constraint firstItem="uWe-wC-6ua" firstAttribute="leading" secondItem="f52-nC-2fp" secondAttribute="leadingMargin" id="7e9-h9-2eF"/>
                             <constraint firstItem="9lQ-MT-5ZQ" firstAttribute="top" secondItem="qu0-72-mTo" secondAttribute="bottom" constant="10" id="9DD-uu-AhA"/>
+                            <constraint firstItem="gem-4T-avM" firstAttribute="leading" secondItem="f52-nC-2fp" secondAttribute="leadingMargin" constant="10" id="9EF-7J-0nM"/>
                             <constraint firstItem="22b-U7-322" firstAttribute="top" secondItem="vdd-lu-FLu" secondAttribute="bottom" constant="10" id="FEt-Vz-xCy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gem-4T-avM" secondAttribute="trailing" constant="10" id="FSC-vg-bh9"/>
                             <constraint firstItem="qu0-72-mTo" firstAttribute="top" secondItem="uWe-wC-6ua" secondAttribute="bottom" constant="10" id="JBD-Gs-sFg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="22b-U7-322" secondAttribute="trailing" id="Vq1-m1-sF3"/>
                             <constraint firstItem="JH6-pu-xbk" firstAttribute="top" secondItem="BhG-Z7-Knn" secondAttribute="bottom" constant="10" id="Z0y-fi-AaJ"/>
                             <constraint firstItem="9lQ-MT-5ZQ" firstAttribute="trailing" secondItem="uWe-wC-6ua" secondAttribute="trailing" id="ZqJ-q3-2Hk"/>
                             <constraint firstItem="9lQ-MT-5ZQ" firstAttribute="height" secondItem="uWe-wC-6ua" secondAttribute="height" id="dy5-b2-ldt"/>
